work-in-progress/ingress/ingress-resource-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /brek
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port: 
              number: 80
